got latitude and longitue from current service to use with UV

--- a/index.html
+++ b/index.html
@@ -38,15 +38,30 @@
                 title=""
               />
             </div>
-           </form>
-          
-          <button type="“button”" id="submitWeather" class=“btn”>
+          </form>
+
+          <button type="“button”" id="submitWeather" class="“btn”">
             Search
           </button>
         </div>
         <div class="col-sm-9">
-          
           <div id="result"></div>
+
+          <div id="5dayForecast">
+            <!-- <h2>5 Day Forecast:</h2>
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a> -->
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
