wip getting multiple ajax calls

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </div>
         <div class="col-sm-9">
           <div id="result"></div>
+          <div id="UV"></div>
 
           <div id="5dayForecast">
             <!-- <h2>5 Day Forecast:</h2>
