updated search button to use font awesome icon

--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
             <h3>Search for a City:</h3>
             <div class="form-group form-inline">
               <input type="text" name="city" id="city" class="form-control" placeholder="City Name">
-              <button type="“button”" id="submitWeather" class="“btn”">
-                Search
-              </button>
+              <button class="btn btn-primary" id="submitWeather"><i class="fa fa-search"></i></button>
+              <button class="btn"></i></button>
+              
+              <!-- <button type="reset" id="submitWeather">
+                <i class="fas fa-search"></i>
+              </button> -->
             </div>
           </div>
         </div>
