update html card for format

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
               <h2>5 Day Forecast:</h2>
             </div>
             <div class="row">
-              <div class="col=sm-2">
-                <div class="card" style="width: 18rem;">
+              <div class="col-sm-2">
+                <div class="card" >
                   <div class="card-body">
                     <h5 class="card-title" id="day1">Card title</h5>
 
@@ -67,8 +67,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col=sm-2">
-                <div class="card" id="day2" style="width: 18rem;">
+              <div class="col-sm-2">
+                <div class="card" id="day2" >
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
 
@@ -81,8 +81,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col=sm-2">
-                <div class="card" id="day3" style="width: 18rem;">
+              <div class="col-sm-2">
+                <div class="card" id="day3" >
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
 
@@ -95,8 +95,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col=sm-2">
-                <div class="card" id="day4" style="width: 18rem;">
+              <div class="col-sm-2">
+                <div class="card" id="day4" >
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
 
@@ -109,8 +109,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col=sm-2">
-                <div class="card" id="day5" style="width: 18rem;">
+              <div class="col-sm-2">
+                <div class="card" id="day5" >
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
 
