updated html format for cards and added info for 5 day cards in js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-2">
+      <div class="col-sm-3">
         <div class="row">
 
           <div class="container" id="citySearch">
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <div class="col-sm-10">
+      <div class="col-sm-9">
         <div class="containter" id=currentWeather>
           <div id="result"></div>
 
@@ -58,68 +58,60 @@
                   <div class="card-body">
                     <h5 class="card-title" id="day1">Card title</h5>
 
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up
-                      the bulk of the card's content.
+                    <p class="card-text" id="day1Info">
+                      <ui id=temp1></ui>
+                      <ui id=humidity1></ui>
                     </p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
                   </div>
                 </div>
               </div>
               <div class="col-sm-2">
-                <div class="card" id="day2" >
+                <div class="card"  >
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title" id="day2">Card title</h5>
 
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up
-                      the bulk of the card's content.
+                    <p class="card-text" id="day2Info">
+                            <ui id=temp2></ui>
+                            <ui id=humidity2></ui>
                     </p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
+                   </div>
+                </div>
+              </div>
+              <div class="col-sm-2">
+                <div class="card" >
+                  <div class="card-body">
+                    <h5 class="card-title" id="day3">Card title</h5>
+
+                    <p class="card-text"id="day3Info">
+                            <ui id=temp3></ui>
+                            <ui id=humidity3></ui>
+                 </p>
                   </div>
                 </div>
               </div>
               <div class="col-sm-2">
-                <div class="card" id="day3" >
+                <div class="card" >
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title" id="day4">Card title</h5>
 
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up
-                      the bulk of the card's content.
+                    <p class="card-text"id="day4Info">
+                            <ui id=temp4></ui>
+                            <ui id=humidity4></ui>
+                
                     </p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
                   </div>
                 </div>
               </div>
               <div class="col-sm-2">
-                <div class="card" id="day4" >
+                <div class="card" >
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title" id="day5">Card title</h5>
 
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up
-                      the bulk of the card's content.
+                    <p class="card-text"id="day5Info">
+                            <ui id=temp5></ui>
+                            <ui id=humidity5></ui>
+                  
                     </p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-2">
-                <div class="card" id="day5" >
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up
-                      the bulk of the card's content.
-                    </p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
                   </div>
                 </div>
               </div>
