updated to add images for 5 day

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <h5 class="card-title" id="day1">Card title</h5>
 
                     <p class="card-text" id="day1Info">
+                      <ui id=icon1></ui>  
                       <ui id=temp1></ui>
                       <ui id=humidity1></ui>
                     </p>
@@ -71,6 +72,7 @@
                     <h5 class="card-title" id="day2">Card title</h5>
 
                     <p class="card-text" id="day2Info">
+                            <ui id=icon2></ui>      
                             <ui id=temp2></ui>
                             <ui id=humidity2></ui>
                     </p>
@@ -83,6 +85,7 @@
                     <h5 class="card-title" id="day3">Card title</h5>
 
                     <p class="card-text"id="day3Info">
+                            <ui id=icon3></ui>  
                             <ui id=temp3></ui>
                             <ui id=humidity3></ui>
                  </p>
@@ -95,6 +98,7 @@
                     <h5 class="card-title" id="day4">Card title</h5>
 
                     <p class="card-text"id="day4Info">
+                            <ui id=icon4></ui>  
                             <ui id=temp4></ui>
                             <ui id=humidity4></ui>
                 
@@ -108,6 +112,7 @@
                     <h5 class="card-title" id="day5">Card title</h5>
 
                     <p class="card-text"id="day5Info">
+                            <ui id=icon5></ui>  
                             <ui id=temp5></ui>
                             <ui id=humidity5></ui>
                   
