working on adding search to local and sorting

--- a/index.html
+++ b/index.html
@@ -34,16 +34,46 @@
           </div>
         </div>
         <div class="history">
-                <div class="row row-1"></div>
-                <div class="row row-2"></div>
-                <div class="row row-3"></div>
-                <div class="row row-4"></div>
-                <div class="row row-5"></div>
-                <div class="row row-6"></div>
-                <div class="row row-7"></div>
-                <div class="row row-8"></div>
-                <div class="row row-9"></div>
+          <div class="row">
+            <div class="col" id="hist-9"></div>
+          </div>
+            <div class="row">
+              <div class="col" id="hist-8"></div>
+            </div>
+              <div class="row">
+                <div class="col" id="hist-7"></div>
               </div>
+                <div class="row">
+                  <div class="col" id="hist-6"></div>
+                </div>
+                  <div class="row">
+                    <div class="col" id="hist-5"></div>
+                  </div>
+                    <div class="row">
+                      <div class="col" id="hist-4"></div>
+                    </div>
+                      <div class="row">
+                        <div class="col" id="hist-3"></div>
+                      </div>
+                        <div class="row">
+                          <div class="col" id="hist-2"></div>
+                        </div>
+                          <div class="row">
+                            <div class="col" id="hist-1"></div>
+                          </div>
+        </div>
+<!--                             
+
+          <div class="row row-1" id="hist-1">Test</div>
+                <div class="row row-2" id="hist-2"></div>
+                <div class="row row-3" id="hist-3"></div>
+                <div class="row row-4" id="hist-4"></div>
+                <div class="row row-5" id="hist-5"></div>
+                <div class="row row-6" id="hist-6"></div>
+                <div class="row row-7" id="hist-7"></div>
+                <div class="row row-8" id="hist-8"></div>
+                <div class="row row-9" id="hist-9"></div>
+              </div> -->
       </div>
 
       <div class="col-sm-9">
