updated all urls from http to https

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>
         <table id="previousCity">
-        </table>
+      </table>
        
       </div>
 
@@ -136,32 +136,16 @@
     </div>
   </div>
 
+  <footer>
+    <div>
+      Copyright &copy;
+    </div>
+  </footer>
+
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript">
-      // var startYear =  $(".start-year").text
-      // var endYear = $(".start-year").text
-      // var query = $(".search").text
-      // var number = $("number-retrieve")
 
-      // // var queryURL = "https://api.openbrewerydb.org/breweries?by_state=virginia";
-
-      // var queryURL_5Day = "http://api.openweathermap.org/data/2.5/forecast?id=524901&APPID=43604669ed26bcf8b5858af9ce91c46a";
-
-      // var queryURL_5Day = "http://api.openweathermap.org/data/2.5/forecast?id=524901&APPID=43604669ed26bcf8b5858af9ce91c46a";
-      // // "https://api.nytimes.com/svc/search/v2/articlesearch.json?begin_date=" + startYear + "&end_date" + endYear + "&q=" + query + "&api-key=9qYOevLt8LZN1Y60GVBvkg1iZHfGFO2Z";
-
-      // $("#search").on("click", function() {
-
-      //     // console.log(queryURL);
-      // $.ajax({
-      //     url: queryURL,
-      //     method: "GET"
-      // })
-      //         .then(function(response) {
-      //         console.log(response);
-
-      //     });
-      //    });
   </script>
   <script src="main.js"></script>
   <script src="https://momentjs.com/downloads/moment.js"></script>
