made results area blank if no search value

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div id="UV"></div>
         </div>
 
-        <div class="row">
+        <div class="row" id="weatherContainer">
           <div class="col-sm-12">
             <div id="5dayForecast">
               <h2>5 Day Forecast:</h2>
@@ -142,7 +142,7 @@
     </div>
   </footer>
 
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript">
 
