updated logic for if search criteria is null and cleared search box after search

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
        
       </div>
 
-      <div class="col-sm-9">
+        <div class="col-sm-9">
+          <h1 id ="error"></h1>
         <div class="containter" id=currentWeather>
           <div id="result"></div>
 
